[package]
name = "rust"
version = "0.1.0"
edition = "2018"

[lib]
name = "rust"
crate-type = ["lib","staticlib", "cdylib"]

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
flutter_rust_bridge = "1"
num = "0.4" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
image = "0.24.1" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
crossbeam = "0.8" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.